FlightPath 5.x Changelog
========================

2016-08-20
  Added setting for default 'allow dynamic' value.
  
  Fixed bug where draft mode wasn't being selected correctly when fetching degree_id.
  
  Added more CSS class names to elements on degree edit page.
  
  Adjusted CSS in packaged themes' style.css files for what if selection screen.
  
  Fixed What If selection so it pays attention to whether or not the degree was allowed
  to be combined with any other degree.
  

2016-08-04
  Fixed queries in admin (for viewing watchdog logs) to use better PDO system.
  
  Made variable_get/set respect NULL values, to ensure more effience caching and fewer db calls. 
  
  Fixed issue where identical transfer courses with different specific titles for the same student were not being retreived
  correctly.
    

2016-08-01
  Added jQuery includes in the print template files, in case they are needed for debugging.
  
  Fixed bug in History view, where "view/print all" wasn't correctly loading advising sessions
  in sequence.
  

2016-07-26
  Added ability to change popup window sizes in the System Settings form.  Popup window options are
  now stored in the FlightPath.settings javascript object.
  

2016-07-23
  Switched (much of) the course search module to use render arrays, so other modules can make changes.
  
  Added "back" link from Substitute popup


2016-07-16
  Fixed bug where sometimes subs in groups were not showing hours correctly, especially for transfer credits. Was
  fixed by ensuring the "req_by_degree_id" value was always passed along.
  
  Fixed bug in subs where "split sub hours" were being incorrectly reported.  This was because the course's data string
  was not being assembled correctly.

  Fixed issue where min/max hours for a group were not being displayed correctly.

  Added new theme hook, so modules can theme group select rows, to have custom messages.


2016-07-08